--- a/JS/CodeMirror/css/codemirror.ext.css
+++ b/JS/CodeMirror/css/codemirror.ext.css
@@ -58,3 +58,6 @@ body.uses-bootstrap div.CodeMirror-focused {
 	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(82,168,236,0.6);
 	}
+textarea.CodeMirror {
+		height: auto;
+	}
