--- a/Admin/Modules/css/site.admin.module.css
+++ b/Admin/Modules/css/site.admin.module.css
@@ -472,3 +472,23 @@ select.active-no {
 	padding-left: 0.2em;
 	text-shadow: 0px 1px 0px 1px white;
 	}
+
+
+
+#layout-messenger ul li .message div.exception-view {
+	opacity: 0.75;
+	border: 1px solid #555;
+	background: white;
+	font-size: 1.0em;
+	padding: 0.3em 0.6em;
+	}
+#layout-messenger ul li .message cite {
+	font-weight: bold;
+	}
+#layout-messenger ul li .message cite.module {
+	font-style: normal;
+	background-image: url(//img.int1a.net/famfamfam/silk/plugin.png);
+	background-position: 1px -1px;
+	background-repeat: no-repeat;
+	padding-left: 20px;
+	}
