--- a/trunk/modules/Hydrogen/Admin/Instances/css/module.admin.instances.css
+++ b/trunk/modules/Hydrogen/Admin/Instances/css/module.admin.instances.css
@@ -1,4 +1,11 @@
-div.status-box {
+a.instance {
+	font-size: 1.1em;
+	background-image: url(//cdn.int1a.net/img/famfamfam/silk/world.png);
+	background-repeat: no-repeat;
+	padding: 1px 0px 1px 22px;
+	}
+
+body.moduleAdminInstance.action-index div.status-box {
 	float: left;
 	min-width: 16px;
 	min-height: 16px;
@@ -8,27 +15,31 @@ div.status-box {
 	opacity: 0.5;
 	cursor: help;
 	}
-div.status-box.status-box-yes {
+body.moduleAdminInstance.action-index div.status-box.status-box-yes {
 	opacity: 1;
 	}
-div.status-box.status-box-no {
+body.moduleAdminInstance.action-index div.status-box.status-box-no {
 	opacity: 1;
 	}
-div.status-box.status-http{
+body.moduleAdminInstance.action-index div.status-box.status-http{
 	background-image: url(//cdn.int1a.net/img/famfamfam/silk/world.png);
 	}
-div.status-box.status-http.status-box-yes{
+body.moduleAdminInstance.action-index div.status-box.status-http.status-box-yes{
 	background-image: url(//cdn.int1a.net/img/famfamfam/silk/world_add.png);
 	}
-div.status-box.status-http.status-box-no{
+body.moduleAdminInstance.action-index div.status-box.status-http.status-box-no{
 	background-image: url(//cdn.int1a.net/img/famfamfam/silk/world_delete.png);
 	}
-div.status-box.status-file{
+body.moduleAdminInstance.action-index div.status-box.status-file{
 	background-image: url(//cdn.int1a.net/img/famfamfam/silk/server_link.png);
 	}
-div.status-box.status-file.status-box-yes{
+body.moduleAdminInstance.action-index div.status-box.status-file.status-box-yes{
 	background-image: url(//cdn.int1a.net/img/famfamfam/silk/server_add.png);
 	}
-div.status-box.status-file.status-box-no{
+body.moduleAdminInstance.action-index div.status-box.status-file.status-box-no{
 	background-image: url(//cdn.int1a.net/img/famfamfam/silk/server_delete.png);
+	}
+
+body.moduleAdminInstance.action-index table td.label {
+	padding: 0.25em 0.75em;
 	}
