--- a/trunk/modules/Hydrogen/Work/Missions/css/site.mission.css
+++ b/trunk/modules/Hydrogen/Work/Missions/css/site.mission.css
@@ -379,7 +379,7 @@ table tr.mission-row td.cell-title a {
 	text-shadow: 1px 1px 1px white;
 	}
 table tr.mission-row td.cell-title a i {
-	margin-top: 2px;
+/*	margin-top: 2px;*/
 	}
 
 body.controller-work-mission div.overdue {
@@ -858,10 +858,28 @@ body.controller-work-mission.action-index #day-list-small .table-day-small table
 
 
 /*  --  FILTERS  --  */
-#work-mission-buttons ul.dropdown-menu li label {
+#work-mission-buttons {}
+#work-mission-buttons ul.dropdown-menu {}
+#work-mission-buttons ul.dropdown-menu li {}
+#work-mission-buttons ul.dropdown-menu li:hover {
+	background-color: blue !important;
+	color: white !important;
+	}
+#work-mission-buttons ul.dropdown-menu li label{
+	width: 120px;
 	margin-bottom: 0px !important;
 	padding-top: 4px;
 	padding-bottom: 3px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 	font-size: 0.9em !important;
-	letter-spacing: -0.666px;
+	}
+#work-mission-buttons ul.dropdown-menu.condensed-width li label {
+	font-size: 0.86em !important;
+	letter-spacing: -0.08333px;
+	}
+#work-mission-buttons ul.dropdown-menu.condensed-height li label {
+	padding-top: 1px;
+	padding-bottom: 1px;
 	}
